Keycloak/keycloak_gatekeeper_registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /opt/certs/server.crt
          name: crt
          subPath: docker.registry.com.crt
        - mountPath: /opt/certs/server.key
          name: key
          subPath: docker.registry.com.key
      - name: gatekeeper
        #image: carlosedp/keycloak-gatekeeper:latest
        image: keycloak/keycloak-gatekeeper:5.0.0
        args:
        - --config=/etc/keycloak-gatekeeper.conf
        ports:
        - containerPort: 3000
          name: service
        volumeMounts:
        - name: gatekeeper-config
          mountPath: /etc/keycloak-gatekeeper.conf
          subPath: keycloak-gatekeeper.conf
        - name: gatekeeper-files
          mountPath: /html
        - mountPath: /certs/tls.crt
          name: crt
          subPath: docker.registry.com.crt
        - mountPath: /certs/tls.key
          name: key
          subPath: docker.registry.com.key
      volumes:
      - name : gatekeeper-config
        configMap:
          name: gatekeeper-config
      - name : gatekeeper-files
        configMap:
          name: gatekeeper-files
      - name: crt
        secret:
          secretName: keycloak.crt
          defaultMode: 0755
      - name: key
        secret:
          secretName: keycloak.key
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
spec:
  ports:
  - name: http
    port: 30100
    protocol: TCP
    targetPort: service
  selector:
    app: registry
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    layer: L4
    protocol: tcp
  name: registry
spec:
  backend:
    serviceName: registry
    servicePort: 30100
