Keycloak/oidc-keycloak.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - image: jboss/keycloak:10.0.0
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: data
        - mountPath: /opt/jboss/keycloak/standalone/configuration/certs
          name: certs
        - mountPath: /opt/jboss/keycloak/standalone/configuration/keystores/docker.registry.com.crt
          name: crt
          subPath: docker.registry.com.crt
        - mountPath: /opt/jboss/keycloak/standalone/configuration/keystores/docker.registry.com.key
          name: key
          subPath: docker.registry.com.key
      volumes:
      - hostPath:
          path: /tmp/keycloak/data
        name: data
      - hostPath:
          path: /tmp/keycloak/certs
        name: certs
      - name: crt
        secret:
          secretName: keycloak.crt
          defaultMode: 0755
      - name: key
        secret:
          secretName: keycloak.key
          defaultMode: 0755
#        resources:
#          limits:
#            cpu: "1"
#            memory: 1Gi
#          requests:
#            cpu: "0.5"
#            memory: 0.5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - name: http
    port: 30004
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 30005
    protocol: TCP
    targetPort: 8443
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    layer: L4
    protocol: tcp
  name: keycloak-http
spec:
  backend:
    serviceName: keycloak
    servicePort: 30004
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    layer: L4
    protocol: tcp
  name: keycloak-https
spec:
  backend:
    serviceName: keycloak
    servicePort: 30005
